--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-----------------------Q and A section start----------------------->
     <div class="section-center">
-      <p>FREQUENTLY ASKED QUESTIONS ABOUT US</p>
+      <h1>FREQUENTLY ASKED QUESTIONS ABOUT US</h1>
       <article class="question">
         <div class="question-title">
           <p>Is your product save?</p>
