--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="menu-con">
+    <div class="main">
       <div class="menu-grid">
         <!-- <article class="menu-item">
           <img src="images/food-20.jpeg" alt="" />
